fix: Address 3 SonarQube issues
Fixed issues:
- AZgf_xwgYt1rKCf3BOFp for java:S6204 rule
- AZgf_xywYt1rKCf3BOFs for java:S6126 rule
- AZf5XgMn4wskmmBS4hGu for java:S5778 rule

Generated by SonarQube Agent (task: f9964ed3-4daf-42f9-8e9f-284fca337e11)